--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.12.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.0",
+    "timeline-vuejs": "^1.1.7",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
